After purchasing a booking, an email is sent to the user. Had to change SeatClass.js and updateBooking in BookingApi.js to fix bugs.

--- a/src/components/user-profile/DeleteAccountModal.css
+++ b/src/components/user-profile/DeleteAccountModal.css
@@ -9,5 +9,5 @@
 }
 
 .inputPassword{
-    max-width: 70%;
+    max-width: 40%;
 }
